<resources>
    <string name="app_name">NSAW</string>
    <string name="onboard_news">Stay updated with the latest news from 30000+ sources.</string>
    <string name="onboard_stock">Keep track of the latest stock market trends.</string>
    <string name="onboard_weather">Get Real-Time location based weather forecasts.</string>
    <string name="onboarding_button">let\'s begin</string>
    <string name="github_url">https://github.com/Adsama94/NSAW-Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="action_settings">Settings</string>
    <string name="contribute_to_nsaw_on_github">Contribute to NSAW on GitHub!</string>
    <string name="email_for_support_suggestions">Email for Support/Suggestions!</string>
    <string name="please_sign_in_to_continue">Please sign in to continue!</string>
    <string name="news">News</string>
    <string name="stock">Stock</string>
    <string name="weather">Weather</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="low">LOW</string>
    <string name="high">HIGH</string>
    <string name="login_background_image">login background image</string>
    <string name="login_logo_image">login logo image</string>
    <string name="the_week_ahead">THE WEEK AHEAD</string>
    <string name="currently">CURRENTLY</string>
    <string name="summary">SUMMARY</string>
    <string name="visibility">VISIBILITY</string>
    <string name="wind_speed">WIND SPEED</string>
    <string name="volume">VOLUME</string>
    <string name="close">CLOSE</string>
    <string name="open">OPEN</string>
    <string name="collapsing_image">Collapsing Image</string>
    <string name="read_full_article">READ FULL ARTICLE</string>
    <string name="dew_point">DEW POINT</string>
    <string name="humidity">HUMIDITY</string>
    <string name="oops_looks_empty_here_n_kinda_like_your_life">Oops! Looks empty here.\n  Kinda like your life.</string>
    <string name="empty_image">Empty Image</string>
    <string name="please_wait_fetching_results">Please wait. Fetching results.</string>
    <string name="new_delhi_india">New Delhi, India</string>
    <string name="power_news">powered by news api</string>
    <string name="power_stock">powered by alpha vantage api</string>
    <string name="power_weather">powered by dark sky api</string>
    <string name="widget_image_icon">widget_image_icon</string>
    <string name="powered_by_logo">powered_by_logo</string>
    <string name="detail_weather_icon">detail_weather_icon</string>
    <string name="refreshed_at">Refreshed At</string>
    <string name="stock_results_powered_by_alpha_vantage_api">Stock results powered by Alpha Vantage API.</string>
    <string name="weather_feed_powered_by_darksky_api">Weather feed powered by DarkSky API.</string>
    <string name="news_feed_powered_by_newsapi">News feed powered by NewsAPI.</string>
    <string name="github_logo">github_logo</string>
    <string name="email_logo">email_logo</string>
    <string name="nsaw_app_logo_splash_image_by_ocd_films">NSAW app logo,splash image by OCD Films.</string>
    <string name="news_search">Search News</string>
    <string name="unreachable">UNREACHABLE QUERY</string>
    <string name="exit">EXIT</string>
    <string name="internet_disabled">Internet Disabled!</string>
    <string name="latest_feed">Please enable Internet for latest feeds.</string>
    <string name="enable_wifi">Enable WiFi</string>
    <string name="store_db">Item bookmarked</string>
    <string name="remove_db">Bookmark removed</string>
    <string name="bookmarked_image">Bookmarked image</string>
    <string name="news_result_image">News result image</string>
    <string name="fragment_weather_icon">Fragment weather icon</string>
</resources>
