<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_layout_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.DetailActivity">


    <TextView
        android:id="@+id/tv_detail_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/patua_one"
        android:textSize="56sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="27" />

    <TextView
        android:id="@+id/tv_dew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="240dp"
        android:fontFamily="@font/patua_one"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="14" />

    <TextView
        android:id="@+id/tv_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:fontFamily="@font/patua_one"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_dew"
        app:layout_constraintTop_toTopOf="@+id/tv_dew"
        tools:text="4 Km" />

    <TextView
        android:id="@+id/text_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:fontFamily="@font/patua_one"
        android:text="@string/visibility"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_visibility"
        app:layout_constraintEnd_toStartOf="@+id/text_dew"
        app:layout_constraintTop_toTopOf="@+id/text_dew" />

    <TextView
        android:id="@+id/text_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="68dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/patua_one"
        android:text="@string/humidity"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/text_visibility"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_visibility" />

    <TextView
        android:id="@+id/text_dew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:fontFamily="@font/patua_one"
        android:text="@string/dew_point"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_dew"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/patua_one"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_visibility"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="@+id/text_humidity"
        app:layout_constraintTop_toBottomOf="@+id/text_visibility"
        tools:text="41%" />

    <TextView
        android:id="@+id/tv_detail_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/patua_one"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_visibility"
        tools:text="Clear through the day. Thundershower by late evening." />

    <TextView
        android:id="@+id/tv_app_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/patua_one"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_high"
        app:layout_constraintTop_toTopOf="@+id/tv_app_low"
        tools:text="33" />

    <TextView
        android:id="@+id/tv_app_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/patua_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_low"
        tools:text="19" />

    <TextView
        android:id="@+id/tv_detail_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/patua_one"
        android:text="@string/high"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_low"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_temp" />

    <TextView
        android:id="@+id/tv_detail_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/patua_one"
        android:text="@string/low"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_temp" />

    <ImageView
        android:id="@+id/iv_icon_detail"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/detail_weather_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_temp"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>