<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_bookmark_stock_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/patua_one"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="GOOGL" />

        <TextView
            android:id="@+id/tv_bookmark_stock_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="88dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="88dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/droid_sans"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_bookmark_stock_name"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="PATA NAHI" />

        <TextView
            android:id="@+id/tv_bookmark_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="112dp"
            android:fontFamily="@font/patua_one"
            android:text="@string/volume"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_bookmark_stock_volume"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="@+id/tv_bookmark_stock_volume"
            app:layout_constraintTop_toBottomOf="@+id/tv_bookmark_stock_name" />

        <TextView
            android:id="@+id/tv_bookmark_stock_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/droid_sans"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="93.2" />

        <TextView
            android:id="@+id/tv_bookmark_stock_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/droid_sans"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bookmark_low"
            app:layout_constraintVertical_bias="1.0"
            tools:text="91.3" />

        <TextView
            android:id="@+id/tv_bookmark_stock_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/droid_sans"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_bookmark_stock_low"
            app:layout_constraintStart_toEndOf="@+id/tv_bookmark_stock_high"
            tools:text="92" />

        <TextView
            android:id="@+id/tv_bookmark_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="112dp"
            android:fontFamily="@font/patua_one"
            android:text="@string/high"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_bookmark_stock_high"
            app:layout_constraintStart_toStartOf="@+id/tv_bookmark_stock_high"
            app:layout_constraintTop_toBottomOf="@+id/tv_bookmark_stock_name" />

        <TextView
            android:id="@+id/tv_bookmark_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:fontFamily="@font/patua_one"
            android:text="@string/low"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_bookmark_stock_low"
            app:layout_constraintTop_toBottomOf="@+id/tv_bookmark_stock_name" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>